Bug 466881 - Bug reporting feature selects wrong version (leading to bug reports being automatically closed)
Summary: Bug reporting feature selects wrong version (leading to bug reports being aut...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.27.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-05 12:00 UTC by Karl Ove Hufthammer
Modified: 2023-03-15 01:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2023-03-05 12:00:14 UTC
SUMMARY
If you use the bug reporting feature in systemsettings, the version field is set to an old Plasma version, and after submitting the bug report, it is automatically closed, as the version is too old. Not very user-friendly!


STEPS TO REPRODUCE
1. Go to any systemsettings page.
2. Click the hamburger menu and then ‘Report a Bug in the Current Page…’

OBSERVED RESULT
A bug reporting page with the ‘Version’ field set to 5.20.2 is opened. If you actually file the bug, it is automatically closed by the Bug Janitor Service, as the Plasma version is too old (‘no longer eligible for support or maintenance from KDE’).

EXPECTED RESULT
The bug reporting page should be opened with the ‘Version’ field set to the *correct* version. (It would also be nice if the ‘SOFTWARE/OS VERSIONS’ text in the comment box would be automatically set to the correct values.)

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230303
KDE Plasma Version: 5.27.2
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.2.1-1-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-2500 CPU @ 3.30GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1060 3GB/PCIe/SSE2
Manufacturer: MSI
Product Name: MS-7673
System Version: 1.0
Comment 1 Nate Graham 2023-03-06 23:30:04 UTC
Definitely would be nice to set the version number automatically, But when I test this and click "Report a Bug in the Current Page", it defaults to selecting "master" in the version table for all pages I tried.

What page did this behavior happen with?
Comment 2 Karl Ove Hufthammer 2023-03-07 18:42:59 UTC
It happens with all the pages I have tested. An example is the Bluetooth page. Reporting a bug opens a URL without any version info:

https://bugs.kde.org/enter_bug.cgi?product=systemsettings&component=kcm_bluetooth

For comparison, if I report a bug for a standalone application, e.g., Dolphin, a URL with version info is opened:

https://bugs.kde.org/enter_bug.cgi?format=guided&product=dolphin&version=22.12.3

(The URL without any version info now actually defaulted to to 5.27.2 for me, so perhaps it defaults to the value used in the user’s previous/latest bug report for the given product?)
Comment 3 Karl Ove Hufthammer 2023-03-07 18:52:26 UTC
I had a different default version in different browsers, so I did some more digging. The default version is actually stored in a *cookie*. For example, for systemsettings bugs, it’s stored in a cookie named ‘VERSION-systemsettings’ (for me set to ‘5.27.2’).

Anyway, adding the version number to the URL should override any cookie values.
Comment 4 Nate Graham 2023-03-14 21:35:14 UTC
Agreed, will work on it.
Comment 5 Bug Janitor Service 2023-03-14 22:02:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/219
Comment 6 Nate Graham 2023-03-15 00:58:40 UTC
Git commit e0681d2a6a167238624924d4a98e702e705137e9 by Nate Graham.
Committed on 14/03/2023 at 23:30.
Pushed by ngraham into branch 'master'.

Include version number in bug report URL

This way the correct version gets pre-selected in the Bugzilla window.
FIXED-IN: 5.27.4

M  +3    -1    app/SettingsBase.cpp

https://invent.kde.org/plasma/systemsettings/commit/e0681d2a6a167238624924d4a98e702e705137e9
Comment 7 Nate Graham 2023-03-15 01:07:51 UTC
Git commit 7212ef0222f6c29de97cfbb872d463a8ac8964f5 by Nate Graham.
Committed on 15/03/2023 at 01:05.
Pushed by ngraham into branch 'Plasma/5.27'.

Include version number in bug report URL

This way the correct version gets pre-selected in the Bugzilla window.
FIXED-IN: 5.27.4


(cherry picked from commit e0681d2a6a167238624924d4a98e702e705137e9)

M  +3    -1    app/SettingsBase.cpp

https://invent.kde.org/plasma/systemsettings/commit/7212ef0222f6c29de97cfbb872d463a8ac8964f5