Include version number in bug report URL

This way the correct version gets pre-selected in the Bugzilla window.

BUG: 466881
FIXED-IN: 5.27.4